# phare

./: .gitignore  01_setup_benchmark.py  02_run_benchmark.py  README.md  benchmark_config.yaml  download_phare.py  example_config.json  pyproject.toml
.github/workflows/: load.yml
scorers/: biases_scorer.py  debunking_scorer.py  factuality_scorer.py  get_scorer.py  harmful_scorer.py  majority_vote_model.py  misinformation_scorer.py  prompt.py  tools_scorer.py
utils/: load_category.py
utils_scripts/: add_language_to_question.py  bayesian_error_estimation.py  build_id_lists.py  convert_to_json.py  filter_benchmark.py  ids_to_filter.txt  inspect_benchmark.py  merge_benchmark.py  sanity_check.py
